Changes in version 2.2.3
  o New helper functions for RStudio integration
  o New helper functions for use with R transform scripts to process run properties from server

Changes in version 2.2.2
  o New APIs for getting, creating, inferring and dropping LabKey domains (requires LabKey server version 18.2 or later)
  o Fix for Issue #18: labkey.executeSql breaks when using the containerFilter option
  o Add labkey.setDebugMode(TRUE) option to output GET/POST raw response info
  o Fix for labkey.selectRows() API support for colSelect=c(*) regression
  o Support for RStudio integration

Changes in version 2.2.1
  o Support for LabKey CSRF tokens (cross site request forgery)

Changes in version 2.2.0
  o Refactor HTTP client library to use httr instead of rcurl

Changes in version 2.1.136
  o Account for colNameOpt = "rname" in the makeDF.R colSelect check
  o Remove call to open empty window on package load
  o Default to POST for labkey.selectRows, with param for method

Changes in version 2.1.135
  o Change the cast of integers from numeric to integer (Issue #30464)
  o labkey.selectRows updates for colSelect and showHidden properties (Issue #30465)
  o Fix for encoding extended characters in folderPath param (Issue #22034)

Changes in version 2.1.134
  o fix for getQueryDetails to get all column details instead of just default view column list
  o revert previous versions usage of fasttime library for date parsing

Changes in version 2.1.133
  o performance improvements for makeDF, using listToMatrix function
  o update date parser to use fasttime library for POSIXct function

Changes in version 2.1.132
  o fix for Issue 24231: support for date + time
  o add new table search filter param option: Q
  o fix issue with baseUrl parameter being overridden in labkey.saveBatch

Changes in version 2.1.131
  o fix for Issue 26956
  o added labkey.setDefaults support for baseUrl

Changes in version 2.1.130