@@ -10,6 +10,11 @@ export("getSchema")
 export("getFolderPath")
 export("saveResults")
 export("RlabkeyUsersGuide")
+export(labkey.experiment.createData)
+export(labkey.experiment.createMaterial)
+export(labkey.experiment.createRun)
+export(labkey.experiment.saveBatch)
+export(labkey.experiment.SAMPLE_DERIVATION_PROTOCOL)
 
 
 S3method(print, LabkeySession)
