@@ -127,9 +127,10 @@ labkey.domain.drop <- function(baseUrl=NULL, folderPath, schemaName, queryName)
 {
     baseUrl=labkey.getBaseUrl(baseUrl)
 
-    ## check required parameters
-    if (missing(baseUrl) || is.null(baseUrl) || missing(folderPath) || missing(schemaName) || missing(queryName))
-        stop (paste("A value must be specified for each of baseUrl, folderPath, schemaName and queryName."))
+    ## Validate required parameters
+    if (missing(folderPath)) stop (paste("A value must be specified for folderPath."))
+    if (missing(schemaName)) stop (paste("A value must be specified for schemaName."))
+    if (missing(queryName)) stop (paste("A value must be specified for queryName."))
 
     ## normalize the folder path
     folderPath <- encodeFolderPath(folderPath)
